// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cart Sidebar component should render a empty cart correctly 1`] = `
<div>
  <section
    class="c-hEQxdV"
    id="sidebar"
    style="transform: translateX(100%);"
  >
    <button
      aria-label="button-close-sidebar"
      class="c-eOLtzh"
    >
      <svg
        fill="currentColor"
        height="1em"
        viewBox="0 0 256 256"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          fill="none"
          height="256"
          width="256"
        />
        <line
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="16"
          x1="200"
          x2="56"
          y1="56"
          y2="200"
        />
        <line
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="16"
          x1="200"
          x2="56"
          y1="200"
          y2="56"
        />
      </svg>
    </button>
    <nav
      class="c-nMCuV"
    >
      <div
        class="c-gzevCw"
      >
        <p
          class="c-dgMvMW c-fMsmQc c-dgMvMW-eQRsLC-size-lg"
        >
          Carrinho de compras
        </p>
        <div
          class="c-jwMKId"
          id="cart-sidebar-items"
        >
          <div
            class="c-dzUtkR"
          >
            <img
              alt="Imagem de carrinho vazio"
              data-nimg="1"
              decoding="async"
              height="0"
              loading="lazy"
              sizes="100vw"
              src="/_next/image?url=%2Fempty-cart.png&w=3840&q=75"
              srcset="/_next/image?url=%2Fempty-cart.png&w=640&q=75 640w, /_next/image?url=%2Fempty-cart.png&w=750&q=75 750w, /_next/image?url=%2Fempty-cart.png&w=828&q=75 828w, /_next/image?url=%2Fempty-cart.png&w=1080&q=75 1080w, /_next/image?url=%2Fempty-cart.png&w=1200&q=75 1200w, /_next/image?url=%2Fempty-cart.png&w=1920&q=75 1920w, /_next/image?url=%2Fempty-cart.png&w=2048&q=75 2048w, /_next/image?url=%2Fempty-cart.png&w=3840&q=75 3840w"
              style="color: transparent;"
              width="0"
            />
            <p
              class="c-dgMvMW c-igsGei c-dgMvMW-kWyXas-size-md"
            >
              Adicione algo em seu carrinho...
            </p>
          </div>
        </div>
      </div>
    </nav>
  </section>
</div>
`;

exports[`Cart Sidebar component should render correctly 1`] = `
<div>
  <section
    class="c-hEQxdV"
    id="sidebar"
    style="transform: translateX(100%);"
  >
    <button
      aria-label="button-close-sidebar"
      class="c-eOLtzh"
    >
      <svg
        fill="currentColor"
        height="1em"
        viewBox="0 0 256 256"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          fill="none"
          height="256"
          width="256"
        />
        <line
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="16"
          x1="200"
          x2="56"
          y1="56"
          y2="200"
        />
        <line
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="16"
          x1="200"
          x2="56"
          y1="200"
          y2="56"
        />
      </svg>
    </button>
    <nav
      class="c-nMCuV"
    >
      <div
        class="c-gzevCw"
      >
        <p
          class="c-dgMvMW c-fMsmQc c-dgMvMW-eQRsLC-size-lg"
        >
          Carrinho de compras
        </p>
        <div
          class="c-jwMKId"
          id="cart-sidebar-items"
        >
          <ul>
            <li
              class="c-kMCjoS"
            >
              <div
                class="c-dZtilx"
              >
                <img
                  alt="Product 1"
                  data-nimg="1"
                  decoding="async"
                  height="0"
                  loading="lazy"
                  sizes="100vw"
                  src="/_next/image?url=%2Fproduct-not-found.jpg&w=3840&q=75"
                  srcset="/_next/image?url=%2Fproduct-not-found.jpg&w=640&q=75 640w, /_next/image?url=%2Fproduct-not-found.jpg&w=750&q=75 750w, /_next/image?url=%2Fproduct-not-found.jpg&w=828&q=75 828w, /_next/image?url=%2Fproduct-not-found.jpg&w=1080&q=75 1080w, /_next/image?url=%2Fproduct-not-found.jpg&w=1200&q=75 1200w, /_next/image?url=%2Fproduct-not-found.jpg&w=1920&q=75 1920w, /_next/image?url=%2Fproduct-not-found.jpg&w=2048&q=75 2048w, /_next/image?url=%2Fproduct-not-found.jpg&w=3840&q=75 3840w"
                  style="color: transparent;"
                  width="0"
                />
              </div>
              <figure
                class="c-hBSDYn"
              >
                <p
                  class="c-dgMvMW c-dgMvMW-fAKXXr-size-sm"
                >
                  Product 1
                </p>
                <p
                  class="c-dgMvMW c-fFOkxT c-dgMvMW-cEPjnm-size-xs"
                >
                  Qtde:
                   
                  <strong
                    aria-label="item-quantity"
                    data-cy="item-quantity"
                  >
                    3
                  </strong>
                </p>
              </figure>
              <div
                class="c-gsXdEb"
              >
                <p
                  class="c-dgMvMW c-dnNpSg c-dgMvMW-kWyXas-size-md"
                >
                  R$ 89,70
                </p>
                <div
                  class="c-gJlbUq"
                >
                  <button
                    class="c-gXmMMa"
                    data-cy="decrease-item"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      viewBox="0 0 256 256"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <rect
                        fill="none"
                        height="256"
                        width="256"
                      />
                      <line
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="16"
                        x1="40"
                        x2="216"
                        y1="128"
                        y2="128"
                      />
                    </svg>
                  </button>
                  <button
                    class="c-fOZJzt"
                    data-cy="increase-item"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      viewBox="0 0 256 256"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <rect
                        fill="none"
                        height="256"
                        width="256"
                      />
                      <line
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="16"
                        x1="40"
                        x2="216"
                        y1="128"
                        y2="128"
                      />
                      <line
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="16"
                        x1="128"
                        x2="128"
                        y1="40"
                        y2="216"
                      />
                    </svg>
                  </button>
                </div>
              </div>
              <div
                class="c-gsXdEb"
              >
                <button
                  class="c-cHEnSC"
                >
                  <svg
                    fill="currentColor"
                    height="1em"
                    viewBox="0 0 256 256"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <rect
                      fill="none"
                      height="256"
                      width="256"
                    />
                    <line
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="16"
                      x1="216"
                      x2="40"
                      y1="56"
                      y2="56"
                    />
                    <line
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="16"
                      x1="88"
                      x2="168"
                      y1="24"
                      y2="24"
                    />
                    <path
                      d="M200,56V208a8,8,0,0,1-8,8H64a8,8,0,0,1-8-8V56"
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="16"
                    />
                  </svg>
                </button>
              </div>
            </li>
          </ul>
        </div>
      </div>
      <div
        class="c-bfdXkU c-faTUNr"
      >
        <button
          class="c-gJqLDS c-lnvOQW c-gJqLDS-dsZVoc-variant-primary c-gJqLDS-bIqJQp-size-medium"
        >
          Comprar agora
        </button>
      </div>
    </nav>
  </section>
</div>
`;

exports[`Cart Sidebar component should render correctly when cart items is undefined 1`] = `
<div>
  <section
    class="c-hEQxdV"
    id="sidebar"
    style="transform: translateX(100%);"
  >
    <button
      aria-label="button-close-sidebar"
      class="c-eOLtzh"
    >
      <svg
        fill="currentColor"
        height="1em"
        viewBox="0 0 256 256"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          fill="none"
          height="256"
          width="256"
        />
        <line
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="16"
          x1="200"
          x2="56"
          y1="56"
          y2="200"
        />
        <line
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="16"
          x1="200"
          x2="56"
          y1="200"
          y2="56"
        />
      </svg>
    </button>
    <nav
      class="c-nMCuV"
    >
      <div
        class="c-gzevCw"
      >
        <p
          class="c-dgMvMW c-fMsmQc c-dgMvMW-eQRsLC-size-lg"
        >
          Carrinho de compras
        </p>
        <div
          class="c-jwMKId"
          id="cart-sidebar-items"
        >
          <div
            class="c-dzUtkR"
          >
            <img
              alt="Imagem de carrinho vazio"
              data-nimg="1"
              decoding="async"
              height="0"
              loading="lazy"
              sizes="100vw"
              src="/_next/image?url=%2Fempty-cart.png&w=3840&q=75"
              srcset="/_next/image?url=%2Fempty-cart.png&w=640&q=75 640w, /_next/image?url=%2Fempty-cart.png&w=750&q=75 750w, /_next/image?url=%2Fempty-cart.png&w=828&q=75 828w, /_next/image?url=%2Fempty-cart.png&w=1080&q=75 1080w, /_next/image?url=%2Fempty-cart.png&w=1200&q=75 1200w, /_next/image?url=%2Fempty-cart.png&w=1920&q=75 1920w, /_next/image?url=%2Fempty-cart.png&w=2048&q=75 2048w, /_next/image?url=%2Fempty-cart.png&w=3840&q=75 3840w"
              style="color: transparent;"
              width="0"
            />
            <p
              class="c-dgMvMW c-igsGei c-dgMvMW-kWyXas-size-md"
            >
              Adicione algo em seu carrinho...
            </p>
          </div>
        </div>
      </div>
    </nav>
  </section>
</div>
`;
